add new changes

--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -116,13 +116,14 @@
                 Furthermore, believing that things will turn out for the best is one of the keys to success, Stopping and losing hope can be a barrier. Hence, faith doesn’t require a reason or proof, it only requires determination. 
                 For this reason, I trusted the process of getting to ALU. Therefore, I will advise prospective students to give their best in all they do and believe that it will all end well.
               </p>
-              <!-- <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3"> -->
+              <img src="../IMAGES/award.jpg" alt="success" class="img-fluid py-3">
               <!-- <a href="#" class="btn btn-outline-warning"></a> -->
               <p>
                 Additionally, my time at ALU thus far has been amazing, as I am not only better academically but also doing great in terms of entrepreneurship.
                  I was able to establish a hair saloon on campus that helps students to make their hair at affordable prices. 
                 I also hope to expand as I continue my academic and entrepreneurship journey.
               </p>
+              <img src="../IMAGES/Copy of hair - Made with PosterMyWall (1).jpg" alt="hair" class="img-fluid py-3">
             </div>
           </div>
         </div>
@@ -132,24 +133,11 @@
               <span class="card-number fw-bold">06</span>
               <h5 class="card-title py-3">Social Life</h5>
               <p>
-                I can sometimes be seen as a boring person because I love to be
-                by myself either watching a movie or doing some basic stuffs. So
-                far I have tried to become more sociable rather than being an
-                introvert. <br />
-                Most people tend to think I am an introvert and others too an
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                people about life.
-                I have loved to talk to friends and interact more with them because of
-                the friends I made when I started studying in Mauritius. I actually love to make 
-                friends.
+                I have come to realize how important it is to keep a social life. Hence, Music and African cultural dance have been a way of expressing myself over the years. <br>
+                This is because having a social life substantially enhances our everyday activities. Therefore, participating in music and African cultural dance has made life 
+                more exciting and enabled me to live outside of the normal routine and boredom.
               </p>
+              <img src="../IMAGES/festival.jpg" alt="festival" class="img-fluid mt-3">
             </div>
           </div>
         </div>
@@ -166,9 +154,6 @@
                 Despite being Africa's largest economy, gender equality in education has been a major in some parts, especially the rural area. 
                 Hence, education opportunities are mostly limited for girls. However, this barrier did not stop me from getting the basic education I needed to get to the top. 
               </p>
-              <!-- <h3>Some pictures of Jordan Village</h3>
-              <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
-              <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid"> -->
             </div>
           </div>
         </div>
@@ -177,57 +162,17 @@
           <div class="card no2">
             <div class="card-body">
               <span class="card-number fw-bold">07</span>
+              <img src="../IMAGES/ideas.jpg" class="img-fluid"/>
               <h5 class="card-title py-3">Ideas For the Future & Careers</h5>
               <p>
-                I can sometimes be seen as a boring person because I love to be
-                by myself either watching a movie or doing some basic stuffs. So
-                far I have tried to become more sociable rather than being an
-                introvert. <br />
-                Most people tend to think I am an introvert and others too an
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                people about life.
-              </p>
-              <h5 class="card-title py-3">Ideas for Future</h5>
-              <p>
-                Because of the Covid-19 pandemic, we had to travel to Mauritius
-                in January, 2021 instead of September, 2020. It was quite a
-                fascinating situation because we had to do some few lessons
-                online from September to December, 2020 where learnt about
-                certain things of ALU and how to use learning materials provided
-                by the institution. <br />
-                I had to be in quarantine in a country i had no idea about and
-                it was suffocating especially because of the inability to go out
-                and explore the place. I can sometimes be seen as a boring person because I love to be
-                by myself either watching a movie or doing some basic stuffs. So
-                far I have tried to become more sociable rather than being an
-                Most people tend to think I am an introvert and others too an
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas ofm 
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas ofm 
-                
+                My idea for the future is to explore my mission. Thus, my mission is to use my voices, leadership, influence, and teamwork to make progress for “Girl Child Education awareness” around the world, especially in Africa.
+                 This will be done by setting goals and objectives as well as maintaining a sense of realism while challenging myself in the future.  Also, I will make sure my goals are measurable, have deadlines, and that they are particular to my mission's goals.
+                <br>
+                <br>
+                Aside from the plans I have for my future goals, my career is an important aspect that has its own plans too. Therefore, the idea of my career in lecturing includes; pursuing an area of expertise, earning a postgraduate degree, gain relevant experience, 
+                and seeking out an adjunct position as a lecturer. After I have succeeded, I will continue my academic journey by writing for academic publications, and secure a tenured position. As well as publishing my own books. <br>
+                <br>
+                Additionally, I will expand my hair salon business to a full beauty company where everything of beauty can be gotten from. 
               </p>
             </div>
           </div>
@@ -257,13 +202,6 @@
               <p class="Note mt-4">
                 Newly crowned Oba of Benin Kingdom Eheneden Erediauwa (Ewuare II) is guided through a symbolic bridge by the palace chiefs during his coronation in Benin city, Nigeria in 2016.
               </p>
-              <!-- <h3 class="py-3">Indigenous Ghanaian dishes</h3>
-              <p class="Note mt-2">Banku with Pepper and Grilled Tilapia</p>
-              <img src="../IMAGES/banku.jpg" alt="Banku" class="img-fluid">
-              <p class="Note mt-4">Beans with Red Oil and Fried Plantain</p>
-              <img src="../IMAGES/beans.jpg" alt="Beans" class="img-fluid">
-              <p class="Note mt-4">Fufu with Light Soup and Assorted Meat</p>
-              <img src="../IMAGES/fufu.jpg" alt="Fufu" class="img-fluid"> -->
             </div>
           </div>
         </div>
@@ -277,15 +215,15 @@
                 Mauritius is a beautiful island country that is famous for its natural riches and great culture. However, I do not admire the taste and smell of their food because I am already used to typical Nigerian dishes so it was very difficult to cope. 
                 Because of the struggle I had with eating and studies, I reached out to the student life and wellness team. It was them that gave me the strategies to manage my academics and prepare my own meal with the available foodstuff in the country. <br>
             </p>
-              <img src="../IMAGES/Charamel.jpg" alt="Coloured earth" class="img-fluid mt-5">
-              <p class="Note mt-2">Chamarel Seven Colored Earth Geopark</p>
-              <img src="../IMAGES/National__Park.jpg" alt="National Park" class="img-fluid mt-4">
-              <p class="Note mt-2">Black River Gorges National Park</p>
+              <img src="../IMAGES/semo.jpg" alt="semo" class="img-fluid mt-5">
+              <p class="Note mt-2">Semo and egusi soup in Mauritius</p>
+              <img src="../IMAGES/jollof.jpg" alt="jollof" class="img-fluid mt-4">
+              <p class="Note mt-2">Nigeria jollof rice and Moi-Moi</p>
             
             <p>
               It was through the management style, I discovered that I had extra time to venture into entrepreneurship. Then I used the opportunity to start my own establishment on campus, called Jossy Nation Hair Touch.
             </p>
-              <img src="../IMAGES/Flic.jpg" alt="Flic en Flac" class="img-fluid mt-4">
+              <img src="../IMAGES/Copy of hairsaloon logo design - Made with PosterMyWall (3).jpg" alt="hair salon" class="img-fluid mt-4">
               <p class="Note mt-2">Flic En Flac Beach</p>
             <p>
               Although I like traveling and exploring new places, I hardly ever see the time to do such because of my busy schedule. Hence, I use my free time to search for new hairstyles and update my saloon skills.
