add new changes

--- a/HTML/authors.html
+++ b/HTML/authors.html
@@ -68,7 +68,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>I'm Josephine</h5>
              <p>a Nigerian citizen and a team member of our project.
-              Interested in website development or software engineering and has a keen interest in database development.
+              Interested in cybersecurity.
               Helped with the smooth running of our project, constantly checking in to ensure that the project was in the right direction. Assisted when needed to fix bugs.
             </p>
             <a class="bg-danger text-white btn" href="../HTML/story2.html">Her Story</a>
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../IMAGES/Manga.jpeg" class="d-block w-100 author" alt="...">
+          <img src="../IMAGES/mangaliso.jpeg" class="d-block w-100 author" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>I'm Mangaliso</h5>
             <p>an Eswantini citizen and a team member for our project.
@@ -102,7 +102,7 @@
             <h5>I'm Kevin</h5>
              <p> 
               a Kenyan citizen and a team member for our project.
-              Interested in website development or software engineering and has a keen interest in database development.
+              Interested in Data Analysis.
               Helped in the building of our home page, built my webpage and was available for meetings throughout the project.
             </p>
             <a class="bg-danger text-white btn" href="../HTML/story1.html">His Story</a>
