--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -50,7 +50,7 @@
            <div class="card ma1 text-center">
             <div class="card-body">
               <span class="card-number fw-bold">01</span>
-              <img src="../IMAGES/mangaliso.jpeg" class="img-fluid" />
+              <img src="../IMAGES/Manga.jpeg" class="img-fluid" />
                 <h5 class="card-title py-3">About Me</h5>
                 <p>
                   My name is Mangaliso Linda Dlamini (FYI, that's not the Spanish Linda. From my native language, it means to be patient). <br> 
