--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -124,10 +124,6 @@
                 <p>
                   I am looking forward to venturing into the Data Analysis field as it is a field that has been fascinating to me. Furthering my studies beyond the Masters's level in Data Analysis is what I am looking forward to achieving. <br>Eventually, working at big companies like Google would be an ideal career satisfaction. I also look forward to solving food insecurity worldwide, especially in Africa, using the Circular Economy methods in hydroponic farming.
                 </p>
-                <h5 class="card-title py-3">Ideas for Career</h5>
-                <p>
-                  
-                </p>
               </div>
             </div>
           </div>
@@ -141,9 +137,6 @@
                   I come from a community called Mcengeni in the Hhohho district of Eswatini. A community that stands on a mountainous area which makes a for a great scenery especially. 
                   Like most rural communities in the kingdom, it is survived by subsistence farming.
                 </p>
-                <!-- <h3>Some pictures of Jordan Village</h3>
-                <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
-                <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid"> -->
               </div>
             </div>
           </div>
@@ -156,6 +149,9 @@
                 <p>
                   I have had a fantastic experience in Mauritius - Afroca's most beautiful island. The experience has been wow! I travelled a lot during my first year and even got an award for travelling. <br>Travelling comes with other adventures, and one thing that I have come to love is photography. Starting from point zero to becoming an ALU marketing intern is one of the most significant steps I took in my first year. <br>I also learnt how to drive in Mauritius and even got into the taxi business. I also faced some challenges, like when my friend caused an accident, and we had to pay for the damages.
               </p>
+              <img src="../IMAGES/IMG-20210524-WA0021.jpg" alt="" class="img-fluid images">
+              <img src="../IMAGES/IMG_3306.JPG" alt="" class="img-fluid mt-2 images">
+              <p class="Note">Exloring every corner, depth and height of Mauritius</p>
               </div>
             </div>
           </div>
@@ -171,20 +167,11 @@
                   Otherwise, the country is known for its strong cultural values and mountainous landscapes. It has some fascinating artifacts including the second largest rock in the world, 
                   Sibebe Rock and is home to the wildlife big five (Lion, Leopard, elephant, buffalo, rhino) 
                 </p> 
-                <!-- <h3>Pictures of the Edo State</h3>
-                <img src="../IMAGES/Benin_City.jpg" alt="Benin City" class="img-fluid">
-                <p class="Note mt-4">
-                  City of the Benin Kingdom
-                </p>
-                <img src="../IMAGES/leopard.webp" alt="Leopard" class="img-fluid mt-4">
-                <p class="Note mt-4">
-                  The Benin people of Nigeria believe that the Benin leopard is a symbol of Justice and powerful beast, which has royal qualities. 
-                  The leopard reigns over the Savannah, like a king does over his subjects.
-                </p>
-                <img src="../IMAGES/culture.webp" alt="Kakum National Park" class="img-fluid mt-4">
-                <p class="Note mt-4">
-                  Newly crowned Oba of Benin Kingdom Eheneden Erediauwa (Ewuare II) is guided through a symbolic bridge by the palace chiefs during his coronation in Benin city, Nigeria in 2016.
-                </p> -->
+                <br>
+                <br>
+                <h3>Some Historical Places in Kenya</h3>
+                <img src="../IMAGES/thomas-bennie-1jlJrr4XGkU-unsplash.jpg" alt="thomas" class="img-fluid mt-4">
+                <img src="../IMAGES/bibhash-knapsnack-life-banerjee-3QPNiZ_Nqjs-unsplash.jpg" alt="bitbhash" class="img-fluid mt-4">
               </div>
             </div>
           </div>
@@ -205,38 +192,7 @@
             </div>
         </footer>
       </section>
-     <!-- begin wwww.htmlcommentbox.com -->
-    <div id="HCB_comment_box">
-      <a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...
-    </div>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0"
-    />
-    <script type="text/javascript" id="hcb">
-      /*<!--*/ if (!window.hcb_user) {
-        hcb_user = {};
-      }
-      (function () {
-        var s = document.createElement("script"),
-          l = hcb_user.PAGE || ("" + window.location).replace(/'/g, "%27"),
-          h = "https://www.htmlcommentbox.com";
-        s.setAttribute("type", "text/javascript");
-        s.setAttribute(
-          "src",
-          h +
-            "/jread?page=" +
-            encodeURIComponent(l).replace("+", "%2B") +
-            "&mod=%241%24wq1rdBcg%24jYNNrbDaB2Kcv9jxUa2wQ1" +
-            "&opts=16798&num=10&ts=1659018632455"
-        );
-        if (typeof s != "undefined")
-          document.getElementsByTagName("head")[0].appendChild(s);
-      })(); /*-->*/
-    </script>
-    <!-- end www.htmlcommentbox.com -->
-  
+     
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" 
     integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" 
     crossorigin="anonymous" async></script>
