add new changes

--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -151,9 +151,6 @@
                 I come from a community called Mcengeni in the Hhohho district of Eswatini. A community that stands on a mountainous area which makes a for a great scenery especially. 
                 Like most rural communities in the kingdom, it is survived by subsistence farming.
               </p>
-              <!-- <h3>Some pictures of Jordan Village</h3>
-              <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
-              <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid"> -->
             </div>
           </div>
         </div>
@@ -162,6 +159,7 @@
           <div class="card ma2">
             <div class="card-body">
               <span class="card-number fw-bold">07</span>
+              <img src="../IMAGES/ideas.jpg" class="img-fluid"/>
               <h5 class="card-title py-3">Ideas For the Future & Careers</h5>
               <p>
                 The idea is to either go for a masters in Cybersecurity or to work towards earning professional ethical hacking certificates. 
