add new changes

--- a/HTML/authors.html
+++ b/HTML/authors.html
@@ -75,11 +75,11 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../IMAGES/Justus.jpg" class="d-block w-100 author" alt="...">
+          <img src="../IMAGES/justusw.jpeg" class="d-block w-100 author" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>I'm Justus</h5>
             <p>a Kenyan citizen and a team member for our project.
-             Interested in website development or software engineering and has a keen interest in database development.
+             Interested in programming, network technology and cyber security.
             Helped in the designing and building of our home page, assisted in fixing bugs. Built my own page and helped in building the website.
           </p>
           <a class="bg-danger text-white btn" href="../HTML/story3.html">His Story</a>
