added comment section

--- a/HTML/story3.html
+++ b/HTML/story3.html
@@ -204,6 +204,15 @@
     </article>
 
   </main>
+  <div id="disqus_thread" style="width:700px;"></div>
+    <script type="text/javascript">
+        var disqus_shortname = 'ip1-g2'; 
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
   </div>  
   <section class="section3">
     <footer>
