--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -340,21 +340,41 @@
       </div>
     </div>
 
+    <!-- begin wwww.htmlcommentbox.com -->
     <div class="jumbotron comment-jumbotron">
       <div class="container-md">
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label">Comment section</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">Comment</button>
+      <div id="HCB_comment_box">
+        <a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...
+      </div>
+      <link
+        rel="stylesheet"
+        type="text/css"
+        href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0"
+      />
         </div>
       </div>
-    </div>
+    <script type="text/javascript" id="hcb">
+      /*<!--*/ if (!window.hcb_user) {
+        hcb_user = {};
+      }
+      (function () {
+        var s = document.createElement("script"),
+          l = hcb_user.PAGE || ("" + window.location).replace(/'/g, "%27"),
+          h = "https://www.htmlcommentbox.com";
+        s.setAttribute("type", "text/javascript");
+        s.setAttribute(
+          "src",
+          h +
+            "/jread?page=" +
+            encodeURIComponent(l).replace("+", "%2B") +
+            "&mod=%241%24wq1rdBcg%24jYNNrbDaB2Kcv9jxUa2wQ1" +
+            "&opts=16798&num=10&ts=1659018632455"
+        );
+        if (typeof s != "undefined")
+          document.getElementsByTagName("head")[0].appendChild(s);
+      })(); /*-->*/
+    </script>
+    <!-- end www.htmlcommentbox.com -->
 
     <section class="section3">
       <footer>
@@ -370,6 +390,7 @@
           </div>
       </footer>
     </section>
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     
