--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -162,10 +162,7 @@
                 <span class="card-number fw-bold">03</span>
                 <h5 class="card-title py-3">My Country</h5>
                 <p>
-                  Eswatini (formerly Swaziland) is Africa's last absolute monarchy, albeit, there is an ongoing political unrest that is posing a challenge to monarchial rule. <br>
-                  <br>
-                  Otherwise, the country is known for its strong cultural values and mountainous landscapes. It has some fascinating artifacts including the second largest rock in the world, 
-                  Sibebe Rock and is home to the wildlife big five (Lion, Leopard, elephant, buffalo, rhino) 
+               Kenya is a beautiful country in East Africa nicknamed the cradle of humanity. <br>It is known for its beautiful nature and wildlife and is the only country in the world to have a National Park in its capital city. <br>Kenya is also known to be good in sports, especially athletics.
                 </p> 
                 <br>
                 <br>
