add new changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -90,21 +90,10 @@
                             True or not!!
                             We realized that we can become a pillar that will define our world some day!!</p>
                             <p class="mt-4">
-                                <a href="../HTML/author.html" class="btn btn-outline-warning stories-button">The Authors</a>
+                                <a href="../HTML/authors.html" class="btn btn-outline-warning stories-button">The Authors</a>
                             </p>
                          </div>
                         </div>
-                        <!-- <div class="col-md-6">
-                         <div class="ps-5">
-                            <h3>Small Beginnings They Say</h3>
-                            <p>It started when we saw that we can be a change maker in the world we live in.
-                            True or not!!
-                            We realized that we can become a pillar that will define our world some day!!</p>
-                            <p class="mt-4">
-                                <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
-                            </p>
-                         </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -121,8 +110,7 @@
 
                     <div class="hexagon hex1">
                         <a href="../HTML/story1.html">
-                            <p class="desc">Hi, I am Deborah <br>
-                            (a creative and dynamic person)</p>
+                        <h2 class="desc">Hi, I am Deborah </h2>
                         </a>
                     </div>
                     <div class="hexagon hex2">
@@ -155,9 +143,11 @@
                 <div class="jumbotron footer-jumbotron">
                     <div class="container-md">
                         <div class="row">
-                            <div class="col-md-12 pt-3">
-                                <h3>MADE WITH LOVE</h3>
+                            <div class="col-md-6">
                                 <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                            </div>
+                            <div class="col-md-6">
+                                <h3>MADE WITH LOVE</h3>
                             </div>
                         </div>
                     </div>
